test/data/fail/expressions/identifier.module.js
let await; //<>
await = 0; //<>
await: ; //<>
